--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,14 @@
 }
 
 .menu__button {
-  @apply px-6 border-none bg-emerald-600 rounded cursor-pointer;
+  @apply px-6 font-semibold text-base border-none bg-green-600 rounded cursor-pointer;
+}
+.split-btn {
+  @apply bg-yellow-300 hover:bg-yellow-400 text-gray-900;
+}
+
+.reset-btn {
+  @apply bg-pink-700;
 }
 
 /* LOGG */
@@ -29,5 +36,39 @@
   @apply flex justify-center;
 }
 .timelogg__list {
-  @apply flex w-96 justify-between;
+  @apply flex w-96 justify-between mb-3;
+}
+.timelogg__list--action {
+  @apply uppercase;
+}
+
+.timer__title {
+  @apply flex justify-center w-[260px] font-semibold;
+}
+.timer__title--large {
+  @apply relative w-60;
+}
+
+.timelogg {
+  @apply font-bold;
+}
+
+.Start {
+  @apply text-green-300;
+}
+
+.Paus {
+  @apply text-red-400;
+}
+
+.Split {
+  @apply text-yellow-300;
+}
+
+.false {
+  @apply bg-green-600;
+}
+
+.true {
+  @apply bg-red-500;
 }
